outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-24_14-22-01/evaluations/problem_eval841887672009004283_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate proximity and long-term efficiency based on the remaining unvisited nodes, using a normalized combined score that incorporates both distance components and a heuristic for node density to guide selection toward less crowded regions.}
                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of immediate proximity and long-term efficiency based on the remaining unvisited nodes, using a normalized combined score that incorporates both distance components and a heuristic for node density to guide selection toward less crowded regions.}
                                                                                                                                                                                                                                                                    ^
SyntaxError: unmatched '}'
